Fix Button text color for better visibility

--- a/src/styles/Button.module.scss
+++ b/src/styles/Button.module.scss
@@ -6,6 +6,7 @@
     min-height: 50px;
     border-radius: 2em;
 
+    color: white;
     background-color: rgba(0, 0, 0, 0.3);
     text-align: center;
     border: none;
